@@ -15,6 +15,8 @@ Simon Wenner:
  * Paranoia: Basic session closing
  * Paranoia: Encryptet messages are labelled
  * Paranoia: Working commands: /otp help, info, on, off, genkey
+ * Paranoia: Change fake <otp> strings
+ * Paranoia: Session closing on plugin unload
 
 Christan Wäckerlin:
  * One-time pad documentation
